      Occurs when the map entries are made case-insensitive.
  BF: Service Render: Correction of errors if the template contains no header and no footer
  BF: Template Generate:Correction of errors due to duplicate map entries
      Occurs when the map entries are made case-insensitive.
  CR: Compare: Integral part of the API and PDF Tools
      PDF Tools: Compare, Designer, Preview

3.7.3 20200530
  BF: Template: Correction of case insensitive statics
  CR: Test: Added a pixel based comparison of the PDFs

3.7.2 20200530
  BF: Template: Optimization of the statics for case insensitivity 
  BF: Template: Correction/optimization for markup detection and escape
  BF: Test: Correction of JUnit5  
  CR: Maven: Update of dependencies
  CR: Generator: Optimization of the code

3.7.1.1 20200510
  BF: Service: Correction of deprecated code
  BF: Service: Correction of unclosed documents
  BF: Template: Correction/optimization for markup detection and escape
  BF: UsageTemplate: Correction
  CR: Maven: Minimization of dependencies

3.7.0 20200420
  CR: Service: Added support of data type Markup for values
      Service.Meta.data + Service.Meta.data.statics have been changed to the use of CharSequence.
      At the end, a CharSequence is now expected as value instead of a string, which can also be a string.
  CR: Service Template: Added support of data type Markup for values
      Template provides a new Markup object based on CharSequence.
      CharSequence of type markup work like string values, but there is no escape of HTML symbols.
  CR: Service Template Mockup: Added support for markup in properties
      If the value contains one of the following sequences of characters:
          <.../> >...</ &...; 
      The value is interpreted as markup and not escaped.

3.6.0 20200405
  BF: Service Generate: Correction of unclosed document artifacts during merging
  CR: Service Template Meta: Consolidation of header, data and footer in data only