@@ -1,29 +1,0 @@
-This java archive contains several command line tools.
-
-    Compare
-    ----
-usage: java -cp seanox-pdf-tools.jar com.seanox.pdf.Compare <master> <compare>
-
-Compares PDF files pixel-based.
-Any differences are determined page by page and delta images with the
-differences are created. The output directory of the delta images is based on
-the path of the compare file. 
-
-    Designer
-    ----
-usage: java -cp seanox-pdf-tools.jar com.seanox.pdf.Designer ...
-
-Designer is a preview daemon.
-Creates new preview PDF files in the background when the templates are changed,
-based on mock-up data from the property files.
-As program arguments a list of paths and filters/globs of templates is expected.
-Without, the current working directory is used.
-
-    Preview
-    ----
-usage: java -cp seanox-pdf-tools.jar com.seanox.pdf.Preview ...
-
-Preview creates onetime previews of PDF files based on the templates and mock-up
-data from the properties files.
-As program arguments a list of paths and filters/globs of templates is expected.
-Without, the current working directory is used.
